--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100vh;
-    font-family: sans-serif;
+    /* width: 100%;
+    height: auto; */
+    font-family: outfit;
     overflow: hidden;
   }
   
