--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,8 @@ body {
   background-size: cover;
   width: 100%;
   height: 100%;
-  border-right: 100% solid transparent;
   mix-blend-mode: normal;
-  transform: rotate(-179.9deg);
+  transform: rotate(-180deg);
   clip-path: polygon(30% 100%, 100% 100%, 100% -80%);
 }
 
@@ -31,4 +30,6 @@ body {
     transform: translate(-50%,  -50%);
     background-color: white;
     border-radius: 10px;
+    padding: 50px;
+    filter: drop-shadow(0px 32px 72px rgba(20, 20, 43, 0.24));
   }
