--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,20 @@
-body {
-    margin: 0;
-    padding: 0;
-    /* width: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  /* width: 100%;
     height: auto; */
-    font-family: outfit;
-    overflow: hidden;
-  }
-  
-  .containter  {
-    position: relative;
-  }
+  font-family: outfit;
+  overflow: hidden;
+}
 
+.containter {
+  position: relative;
+}
+
+/* background design layer */
 .bg-layer {
   position: absolute;
-  background: linear-gradient(211.36deg, #41528E 36.99%, #1A99A2 77.91%);
+  background: linear-gradient(211.36deg, #41528e 36.99%, #1a99a2 77.91%);
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -22,14 +23,43 @@ body {
   clip-path: polygon(30% 100%, 100% 100%, 100% -80%);
 }
 
+/* form card */
+form {
+  display: flex;
+  flex-direction: column;
+}
 
-  .card-body {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,  -50%);
-    background-color: white;
-    border-radius: 10px;
-    padding: 50px;
-    filter: drop-shadow(0px 32px 72px rgba(20, 20, 43, 0.24));
-  }
+.card-body {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 10px;
+  padding: 50px;
+  filter: drop-shadow(0px 32px 72px rgba(20, 20, 43, 0.24));
+}
+
+.card-text {
+  margin-bottom: 50px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group input {
+  font-family: outfit;
+  font-size: 16px;
+  height: 50px;
+  border: 0.6px solid #8e8383;
+  border-radius: 5px;
+  padding-left: 15px;
+  margin-bottom: 10px;
+}
+
+.form-group input:last-child {
+  margin-top: 10px;
+}
+
