--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ form {
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 342px;
   transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 10px;
@@ -43,6 +44,14 @@ form {
 .card-text {
   margin-bottom: 50px;
   text-align: center;
+}
+
+.card-text h3 {
+  font-size: 36px;
+  padding-bottom: 15px;
+}
+.card-text h5 {
+  font-size: 25px;
 }
 
 .form-group {
@@ -64,3 +73,12 @@ form {
   margin-top: 10px;
 }
 
+.submit {
+  background: #41528e;
+  border: 0.6px solid #8e8383;
+  border-radius: 5px;
+  height: 50px;
+  font-size: 22px;
+  color: aliceblue;
+  margin-top: 25px;
+}
