--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -92,3 +92,50 @@ form a {
   text-decoration: none;
   color: black;
 }
+
+
+/* demo grid-view */
+/* .col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {
+  width: 100%;
+  height: 100%;
+} */
+
+
+/* responsive */
+@media screen and (max-width:768px) {
+  .card-body {
+    width: 350px;
+    padding: 20px;
+  }
+
+  .card-text {
+    margin-bottom: 20px;
+  }
+
+  .card-text h3 {
+    font-size: 24px;
+    padding-bottom: 5px;
+  }
+  .card-text h5 {
+    font-size: 16px;
+  }
+
+  .submit {
+    font-size: 18px;
+  }
+
+  .form a {
+    font-size: 14px;
+  }
+}
