--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -5,6 +5,7 @@
     height: auto; */
   font-family: outfit;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
 .containter {
@@ -34,7 +35,7 @@ form {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 342px;
+  width: 500px;
   transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 10px;
@@ -92,4 +93,44 @@ form a {
   font-size: 20px;
   text-decoration: none;
   color: black;
+}
+
+/* demo grid-view */
+/* .col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {
+  width: 100%;
+  height: 100%;
+} */
+/* responsive */
+@media screen and (max-width: 768px) {
+  .card-body {
+    width: 350px;
+    padding: 20px;
+  }
+  .card-text {
+    margin-bottom: 20px;
+  }
+  .card-text h3 {
+    font-size: 24px;
+    padding-bottom: 5px;
+  }
+  .card-text h5 {
+    font-size: 16px;
+  }
+  .submit {
+    font-size: 18px;
+  }
+  .form a {
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=style.css.map */
