--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,93 +1,141 @@
 * {
-    margin: 0;
-    padding: 0;
-    /* width: 100%;
-      height: auto; */
-    font-family: outfit;
-    overflow: hidden;
-  }
-  
-  .containter {
-    position: relative;
-  }
-  
-  /* background design layer */
-  .bg-layer {
-    position: absolute;
-    background: linear-gradient(211.36deg, #41528e 36.99%, #1a99a2 77.91%);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    mix-blend-mode: normal;
-    transform: rotate(-180deg);
-    clip-path: polygon(30% 100%, 100% 100%, 100% -80%);
-  }
-  
-  /* form card */
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
+  margin: 0;
+  padding: 0;
+  /* width: 100%;
+    height: auto; */
+  font-family: outfit;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.containter {
+  position: relative;
+}
+
+/* background design layer */
+.bg-layer {
+  position: absolute;
+  background: linear-gradient(211.36deg, #41528e 36.99%, #1a99a2 77.91%);
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  mix-blend-mode: normal;
+  transform: rotate(-180deg);
+  clip-path: polygon(30% 100%, 100% 100%, 100% -80%);
+}
+
+/* form card */
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-body {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 10px;
+  padding: 50px;
+  filter: drop-shadow(0px 32px 72px rgba(20, 20, 43, 0.24));
+}
+
+.card-text {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.card-text h3 {
+  font-size: 36px;
+  padding-bottom: 15px;
+}
+.card-text h5 {
+  font-size: 25px;
+  font-weight: 400;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group input {
+  font-family: outfit;
+  font-size: 16px;
+  height: 50px;
+  border: 0.6px solid #8e8383;
+  border-radius: 5px;
+  padding-left: 15px;
+  margin-bottom: 10px;
+}
+
+.form-group input:last-child {
+  margin-top: 10px;
+}
+
+.submit {
+  background: #41528e;
+  border: 0.6px solid #8e8383;
+  border-radius: 5px;
+  height: 50px;
+  font-size: 22px;
+  color: aliceblue;
+  margin: 20px 0;
+  cursor: pointer;
+}
+
+form a {
+  text-align: center;
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+
+/* demo grid-view */
+/* .col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {
+  width: 100%;
+  height: 100%;
+} */
+
+
+/* responsive */
+@media screen and (max-width:768px) {
   .card-body {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 342px;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border-radius: 10px;
-    padding: 50px;
-    filter: drop-shadow(0px 32px 72px rgba(20, 20, 43, 0.24));
+    width: 350px;
+    padding: 20px;
   }
-  
+
   .card-text {
-    margin-bottom: 50px;
-    text-align: center;
+    margin-bottom: 20px;
   }
-  
+
   .card-text h3 {
-    font-size: 36px;
-    padding-bottom: 15px;
+    font-size: 24px;
+    padding-bottom: 5px;
   }
   .card-text h5 {
-    font-size: 25px;
-    font-weight: 400;
-  }
-  
-  .form-group {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .form-group input {
-    font-family: outfit;
     font-size: 16px;
-    height: 50px;
-    border: 0.6px solid #8e8383;
-    border-radius: 5px;
-    padding-left: 15px;
-    margin-bottom: 10px;
   }
-  
-  .form-group input:last-child {
-    margin-top: 10px;
-  }
-  
+
   .submit {
-    background: #41528e;
-    border: 0.6px solid #8e8383;
-    border-radius: 5px;
-    height: 50px;
-    font-size: 22px;
-    color: aliceblue;
-    margin: 20px 0;
-    cursor: pointer;
+    font-size: 18px;
   }
-  
-  form a {
-    text-align: center;
-    font-size: 20px;
-    text-decoration: none;
-    color: black;
+
+  .form a {
+    font-size: 14px;
   }
+}
