--- a/src/sass/student-dashboard.css
+++ b/src/sass/student-dashboard.css
@@ -1,32 +1,104 @@
 * {
-    margin: 0;
-    padding: 0;
-    /* width: 100%;
+  margin: 0;
+  padding: 0;
+  /* width: 100%;
       height: auto; */
-    font-family: outfit;
-    overflow: hidden;
-  }
+  font-family: Poppins;
+  overflow: hidden;
+}
 /* navbar */
-  .navbar {
-    position: fixed;
-    width: 100%;
-    height: 115px;
-  }
+.navbar {
+  position: fixed;
+  width: 100%;
+  height: 115px;
+}
 
-  .user-img img {
-    width: 65px;
-    height: 65px;
-    padding-left: 75px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+.user-img img {
+  width: 65px;
+  height: 65px;
+  padding-left: 75px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 /* sidebar */
 .sidebar {
-    width: 260px;
-    height: 842px;
-    background-color: aquamarine;
-    margin-top: 120px;
-    border-radius: 0px 20px 20px 0px;
-    background: linear-gradient(199.57deg, #41528E 34.02%, #1A99A2 104.29%), #41528E;
+  width: 260px;
+  height: 842px;
+  background-color: aquamarine;
+  margin-top: 120px;
+  border-radius: 0px 20px 20px 0px;
+  background: linear-gradient(199.57deg, #41528e 34.02%, #1a99a2 104.29%),
+    #41528e;
+}
+
+/* sidebar menu */
+.side-menu-list {
+  margin-left: 50px;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.side-menu {
+  display: flex;
+  align-items: center;
+  width: 140px;
+  height: 100px;
+  border-bottom: 1px solid #1a99a2;
+}
+
+.side-menu img {
+  margin-right: 15px;
+}
+
+.side-menu a {
+  width: 100%;
+  font-size: 18px;
+  text-decoration: none;
+  color: #ffffff;
+}
+/* ~~~sidebar~~~ */
+
+/* Main container */
+section {
+  position: absolute;
+  top: 125px;
+  left: 350px;
+  width: 70%;
+  height: 700px;
+  background-color: #1a99a2;
+}
+
+.top-sec {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container .title {
+  
+}
+
+/* searchbar */
+.top-sec input[type="text"] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+.top-sec .search-course button {
+  width: auto;
+  height: auto;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  
+  cursor: pointer;
+}
+
+.search-course form {
+  display: flex;
 }
