--- a/src/sass/student-dashboard.css
+++ b/src/sass/student-dashboard.css
@@ -45,6 +45,7 @@
   width: 140px;
   height: 100px;
   border-bottom: 1px solid #1a99a2;
+  transition: 0.5s;
 }
 
 .side-menu img {
@@ -57,6 +58,11 @@
   text-decoration: none;
   color: #ffffff;
 }
+
+.side-menu:hover {
+  transform: translateY(-10px);
+}
+
 /* ~~~sidebar~~~ */
 
 /* Main container */
@@ -144,7 +150,7 @@
   /* background: #2a2b2f; */
   /* border: 2px solid #1e1f23; */
   border-radius: 15px;
-  box-shadow: 0 20px 50px rgba(153, 153, 153, 0.5);
+  box-shadow: 10px 10px 20px 0px rgba(153, 153, 153, 0.5);
   transition: 0.5s;
   overflow: visible;
 }
@@ -160,7 +166,7 @@
 }
 .main-container .card .box:hover {
   transform: translateY(-10px);
-  box-shadow: 0 40px 70px rgba(0, 0, 0, 0.5);
+  box-shadow: 10px 10px 20px 0px rgba(153, 153, 153, 0.5);
 }
 .main-container .card .box .content {
   padding: 20px;
