--- a/src/sass/student-dashboard.css
+++ b/src/sass/student-dashboard.css
@@ -133,7 +133,7 @@
 
 .main-container .card {
   position: relative;
-  min-width: 360px;
+  min-width: 400px;
   height: 300px;
   border-radius: 15px;
   margin-bottom: 20px;
@@ -144,12 +144,13 @@
   left: 20px;
   right: 20px;
   bottom: 20px;
-  display: flex;
+  /* padding: 20px 20px; */
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  /* background: #2a2b2f; */
+  align-items: center; */
+  /* background: #838383; */
   /* border: 2px solid #1e1f23; */
-  border-radius: 15px;
+  border-radius: 40px;
   box-shadow: 10px 10px 20px 0px rgba(153, 153, 153, 0.5);
   transition: 0.5s;
   overflow: visible;
@@ -161,7 +162,8 @@
   left: 0;
   width: 50%;
   height: 100%;
-  /* background: rgba(255, 255, 255, 0.05); */
+  background: rgba(58, 178, 202, 0.169);
+  border-radius: 40px 10px 10px 40px;
   pointer-events: none;
 }
 .main-container .card .box:hover {
@@ -170,7 +172,7 @@
 }
 .main-container .card .box .content {
   padding: 20px;
-  text-align: center;
+  /* text-align: center; */
 }
 .main-container .card .box .content h2 {
   position: absolute;
@@ -207,4 +209,21 @@
   font-weight: 400;
   color: #fff;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+
+/* progress bar */
+.main-container .progress-bar {
+  width: auto;
+  height: 10px;
+  background-color: #e2e1e1;
+  border-radius: 5px;
+  margin-top: 100px;
+}
+
+.prog-bar {
+  width: 70%;
+  height: 10px;
+  background-color: #1a99a2 !important;
+  border-radius: 5px;
 }
