--- a/src/sass/student-dashboard.css
+++ b/src/sass/student-dashboard.css
@@ -24,7 +24,7 @@
 /* sidebar */
 .sidebar {
   width: 260px;
-  height: 842px;
+  height: 100vh;
   background-color: aquamarine;
   margin-top: 120px;
   border-radius: 0px 20px 20px 0px;
