--- a/src/sass/start-exam.css
+++ b/src/sass/start-exam.css
@@ -1,76 +1,114 @@
 * {
-    margin: 0;
-    padding: 0;
-    /* width: 100%;
+  margin: 0;
+  padding: 0;
+  /* width: 100%;
         height: auto; */
-    font-family: Poppins;
-    overflow: hidden;
-  }
-  /* navbar */
-  .navbar {
-    position: fixed;
-    width: 100%;
-    height: 115px;
-  }
-  
-  .user-img img {
-    width: 65px;
-    height: 65px;
-    padding-left: 75px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-  }
-  
-  /* sidebar */
-  .sidebar {
-    width: 260px;
-    height: 100vh;
-    background-color: aquamarine;
-    margin-top: 120px;
-    border-radius: 0px 20px 20px 0px;
-    background: linear-gradient(199.57deg, #41528e 34.02%, #1a99a2 104.29%),
-      #41528e;
-  }
-  
-  /* sidebar menu */
-  .side-menu-list {
-    margin-left: 50px;
-    margin-top: 50px;
-    width: 100%;
-  }
-  
-  .side-menu {
-    display: flex;
-    align-items: center;
-    width: 140px;
-    height: 100px;
-    border-bottom: 1px solid #1a99a2;
-    transition: 0.5s;
-  }
-  
-  .side-menu img {
-    margin-right: 15px;
-  }
-  
-  .side-menu a {
-    width: 100%;
-    font-size: 18px;
-    text-decoration: none;
-    color: #ffffff;
-  }
-  
-  .side-menu:hover {
-    transform: translateY(-10px);
-  }
-  
-  /* ~~~sidebar~~~ */
-  
-  /* Main container */
-  .container {
-    position: absolute;
-    top: 125px;
-    left: 350px;
-    width: 70%;
-    height: auto;
-  }
-  
+  font-family: Poppins;
+  overflow: hidden;
+}
+/* navbar */
+.navbar {
+  position: fixed;
+  width: 100%;
+  height: 115px;
+}
+
+.user-img img {
+  width: 65px;
+  height: 65px;
+  padding-left: 75px;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+section {
+  display: flex;
+}
+
+/* sidebar */
+.sidebar {
+  width: 260px;
+  height: 100vh;
+  background-color: aquamarine;
+  margin-top: 120px;
+  border-radius: 0px 20px 20px 0px;
+  background: linear-gradient(199.57deg, #41528e 34.02%, #1a99a2 104.29%),
+    #41528e;
+}
+
+/* sidebar menu */
+.side-menu-list {
+  margin-left: 50px;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.side-menu {
+  display: flex;
+  align-items: center;
+  width: 140px;
+  height: 100px;
+  border-bottom: 1px solid #1a99a2;
+  transition: 0.5s;
+}
+
+.side-menu img {
+  margin-right: 15px;
+}
+
+.side-menu a {
+  width: 100%;
+  font-size: 18px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.side-menu:hover {
+  transform: translateY(-10px);
+}
+
+/* ~~~sidebar~~~ */
+
+/* Main container */
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70%;
+  height: auto;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-content {
+  width: 897px;
+  height: 330px;
+  color: #ffffff;
+  background: linear-gradient(250.71deg, #1a99a1 -9.97%, #41528e 65.17%);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.big-div {
+  width: 100%;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.exam-btn button {
+  width: 241px;
+  height: 74px;
+  margin-top: 50px;
+  background: #ffffff;
+  border: 2px solid #4a3aff;
+  border-radius: 6px;
+  background: #41528e;
+  border: 2px solid #4a3aff;
+  border-radius: 6px;
+  font-size: 28px;
+  color: #ffffff;
+  font-weight: bold;
+}
