--- a/src/sass/question.css
+++ b/src/sass/question.css
@@ -153,3 +153,98 @@ section {
   color: #ffffff;
   font-weight: bold;
 }
+/* kf_work */
+.time-qbox{
+  position: absolute;
+  width: 273px;
+  height: 152px;
+  left: 1566px;
+  top: 165px;
+
+  background: #41528E;
+  border-radius: 16px;
+  }
+  .time-qbox .time{
+  text-align: center;
+  font-family: 'Inter';
+  font-style: normal;
+  padding-top: 20px;
+  line-height: 39px;
+  color: #EBEDFA;
+
+}
+
+/* progress bar */
+.progres-bar {
+  width: auto;
+  height: 10px;
+  background-color: #ebeced;
+  border-radius: 5px;
+  margin: 20px;
+  margin-top: auto;
+  margin-bottom: 40px;
+}
+
+.p-bar {
+  width: 30%;
+  height: 10px;
+  background: linear-gradient(270deg, #FF5789 0%, #FF5789 102.96%); !important;
+  border-radius: 5px;
+}
+
+.questions{
+box-sizing: border-box;
+position: absolute;
+width: 264px;
+height: 400px;
+left: 1566px;
+top: 369px;
+background: #FFFFFF;
+box-shadow: 0px 24px 64px rgba(0, 0, 0, 0.15);
+border-radius: 20px;
+text-align: center;
+padding: 10px;
+display: flex;
+flex-wrap: wrap;
+}
+.Div{
+  width: 240px;
+  height: 350px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 25px;
+  margin-left: 8px;
+  
+}
+.Div >div{
+  width: 50px;
+  height:60px;
+  padding: 5px;
+  margin-top: 15px;
+  margin: 8px;
+  margin-left: 8px;
+  border-radius: 5px;
+  background-color: rgb(177, 186, 229);
+}
+.questions h3{
+  margin-left: auto;
+  margin-right: auto;
+}
+.questions .Div .six{
+  background-color: #F96161;
+}
+.questions .Div .seven{
+  background-color: #F96161;
+}
+.questions .Div .eight{
+  background-color: #F96161;
+}
+.questions .Div .nine{
+  background-color: #F96161;
+}
+.questions .Div a{
+  text-decoration: none;
+  font-size: 30px;
+  color: #000000;
+  padding-top: 10px;
+}
